create employment history for person type employee