@@ -9,6 +9,7 @@ import pl.kurs.anonymoussurveillance.models.RequiredAttribute;
 import pl.kurs.anonymoussurveillance.models.PersonType;
 import pl.kurs.anonymoussurveillance.repositories.PersonTypeRepository;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -35,11 +36,7 @@ public class DataInitializer implements CommandLineRunner {
                 new RequiredAttribute("scholarshipAmount", AttributeType.DOUBLE)
         )));
 
-        createDefaultPersonType("employee", combineAttributes(commonAttributes, Arrays.asList(
-                new RequiredAttribute("employmentStartDate", AttributeType.DATE),
-                new RequiredAttribute("role", AttributeType.STRING),
-                new RequiredAttribute("salary", AttributeType.DOUBLE)
-        )));
+        createDefaultPersonType("employee", combineAttributes(commonAttributes, List.of()));
 
         createDefaultPersonType("retiree", combineAttributes(commonAttributes, Arrays.asList(
                 new RequiredAttribute("pension", AttributeType.DOUBLE),
@@ -59,7 +56,7 @@ public class DataInitializer implements CommandLineRunner {
     }
 
     private List<RequiredAttribute> combineAttributes(List<RequiredAttribute> commonAttributes, List<RequiredAttribute> specificAttributes) {
-        List<RequiredAttribute> combinedAttributes = specificAttributes.stream().collect(Collectors.toList());
+        List<RequiredAttribute> combinedAttributes = new ArrayList<>(specificAttributes);
         combinedAttributes.addAll(commonAttributes);
         return combinedAttributes;
     }
